<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">House Police</string>
    <string name="action_settings">Settings</string>
    <string name="chore_title_hint">Enter a title</string>
    <string name="chore_title_label">Title</string>
    <string name="chore_desc_label">Description</string>
    <string name="chore_desc_hint">Enter a description</string>

    <string name="chore_details_label">Details</string>
    <string name="chore_solved_label">Suspect was ticketed</string>
    <string name="date_picker_title">Date:</string>
    <string name="new_chore">New Incident</string>
    <string name="delete_chore">Delete Crime</string>

    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s chores</string>
    <string name="subtitle_new_chore">Press + to add a incident</string>

    <string name="chore_suspect_text">Choose Suspect</string>
    <string name="chore_suspect_selected">The suspect is %1$s</string>

    <string name="chore_report_text">Ticket the suspect</string>
    <string name="chore_report">%1$s\n%2$s! The crime was discovered on %3$s. %4$s.</string>
    <string name="house_police_report">This is a House Police Incident Report: </string>

    <string name="chore_report_solved">The case is solved</string>
    <string name="chore_report_unsolved">The case is not solved</string>
    <string name="chore_report_no_suspect">There is no suspect at this time</string>
    <string name="chore_report_suspect">The suspect is %s</string>
    <string name="chore_report_subject">House Police Incident Report</string>
    <string name="send_report">Send ticket via</string>

</resources>
